--- a/src/ar/com/xeven/ProductosView.fxml
+++ b/src/ar/com/xeven/ProductosView.fxml
@@ -1,78 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="AnchorPane" prefHeight="700" prefWidth="1000" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ar.com.xeven.ProductosViewController">
     <children>
-      <MenuBar nodeOrientation="LEFT_TO_RIGHT" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <menus>
-          <Menu text="Archivo">
-            <items>
-                  <MenuItem fx:id="menuNuevaOrden" onAction="#nuevaOrden" text="_Nueva orden" />
-              <MenuItem fx:id="menuCerrar" onAction="#cerrar" text="_Cerrar" />
-            </items>
-          </Menu>
-          <Menu text="Editar">
-            <items>
-              <MenuItem fx:id="menuEliminar" onAction="#eliminarOrden" text="_Eliminar" />
-            </items>
-          </Menu>
-          <Menu text="Ayuda">
-            <items>
-              <MenuItem fx:id="menuAbout" onAction="#acercaDe" text="Acerca de" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-       <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="800.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="30.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0">
+      <VBox focusTraversable="true" nodeOrientation="LEFT_TO_RIGHT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <MenuBar nodeOrientation="LEFT_TO_RIGHT">
+              <menus>
+                <Menu text="Archivo">
+                  <items>
+                        <MenuItem fx:id="menuNuevaOrden" onAction="#nuevaOrden" text="_Nueva orden" />
+                    <MenuItem fx:id="menuCerrar" onAction="#cerrar" text="_Cerrar" />
+                  </items>
+                </Menu>
+                <Menu text="Editar">
+                  <items>
+                    <MenuItem fx:id="menuEliminar" onAction="#eliminarOrden" text="_Eliminar" />
+                  </items>
+                </Menu>
+                <Menu text="Ayuda">
+                  <items>
+                    <MenuItem fx:id="menuAbout" onAction="#acercaDe" text="Acerca de" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <children>
-                  <TreeTableView fx:id="rptProductos" editable="true" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TreeTableView fx:id="tablaProductos" editable="true" prefWidth="977.0" HBox.hgrow="SOMETIMES">
                     <columns>
-                      <TreeTableColumn fx:id="colProducto" maxWidth="800.0" minWidth="100.0" onEditStart="#mostrarDetalleProducto" prefWidth="250.0" text="ID" />
-                      <TreeTableColumn fx:id="colTamanio" maxWidth="400.0" minWidth="100.0" prefWidth="110.0" text="Producto" />
-                        <TreeTableColumn fx:id="colCantidad" maxWidth="100.0" minWidth="75.0" prefWidth="75.0" text="Descripción" />
-                        <TreeTableColumn fx:id="colPrecioUnitario" maxWidth="250.0" minWidth="75.0" prefWidth="110.0" text="Precio" />
-                        <TreeTableColumn fx:id="colSubtotal" maxWidth="250.0" minWidth="75.0" prefWidth="110.0" text="Tamaño" />
-                        <TreeTableColumn fx:id="colTotal" maxWidth="300.0" minWidth="75.0" prefWidth="110.0" text="Accesorios" />
+                      <TreeTableColumn fx:id="colNombre" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="200.0" text="Producto" />
+                        <TreeTableColumn fx:id="colDetalles" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="300.0" text="Detalles" />
+                        <TreeTableColumn fx:id="colTamanio" maxWidth="300.0" minWidth="75.0" prefWidth="75.0" text="Tamaño" />
+                        <TreeTableColumn fx:id="colPrecio" maxWidth="200.0" minWidth="75.0" prefWidth="75.0" text="Precio" />
                     </columns>
-                     <columnResizePolicy>
-                        <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
                   </TreeTableView>
-               </children>
-          </AnchorPane>
-          <AnchorPane minHeight="50.0" minWidth="100.0" prefHeight="398.0" prefWidth="273.0">
-             <children>
-                 <GridPane fx:id="detallesOrden" alignment="CENTER_LEFT" focusTraversable="true" vgap="5.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                 <GridPane fx:id="detallesProd" alignment="CENTER_LEFT" focusTraversable="true" prefHeight="671.0" prefWidth="763.0" vgap="5.0">
                      <columnConstraints>
-                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="50.0" prefWidth="141.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="50.0" prefWidth="189.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="150.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="150.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="150.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="150.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="50.0" percentWidth="33.0" prefWidth="141.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="50.0" percentWidth="39.0" prefWidth="189.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" percentWidth="31.0" />
                      </columnConstraints>
                      <rowConstraints>
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -80,59 +67,46 @@
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                         <Label text="Número de producto: " GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
-                         <Label fx:id="idOrden" text="123" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                         <Label text="Nombre:" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                         <TextField fx:id="nombreContacto" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                         <Label text="Producto: " GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" />
+                         <Label fx:id="prodID" text="123" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="0" />
+                         <Label text="Nombre:" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                         <TextField fx:id="nombreProducto" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                             
-                         <Label text="Fecha de modificación:" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-                         <DatePicker fx:id="fechaPrecio" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                               <Label text="Fecha de precio:" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                         <DatePicker fx:id="fechaPrecio" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
 
-                         <Label text="Descripción:" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-   
-                         <Label text="Estado:" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
-                         <ComboBox fx:id="status" onAction="#cambioEstado" GridPane.columnIndex="5" GridPane.rowIndex="8" />
-   
-                         <HBox alignment="BOTTOM_RIGHT" fillHeight="false" prefHeight="100.0" spacing="15" GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
-      <children>
-                            <Button fx:id="btnAgregarProductos" onAction="#cancelarCambios" text="Agregar _productos" />
-                            <Button fx:id="btnGuardar" defaultButton="true" onAction="#guardarOrden" text="_Guardar cambios" />
-      </children>
-                           <GridPane.margin>
-                              <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                           </GridPane.margin>
-                        </HBox>
-                        <TextArea fx:id="detallesAdicionales" maxHeight="150.0" prefHeight="50.0" prefWidth="50.0" wrapText="true" GridPane.columnIndex="3" GridPane.rowSpan="2" />
-                        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" graphicTextGap="0.0" mnemonicParsing="false" opacity="0.46" style="-fx-background-radius: 5em; -fx-graphic: url(&quot;resources/color/001_01.png&quot;); -fx-background-color: -fx-body-color; -fx-background-size: 1em;" text="+" textAlignment="CENTER" textFill="#0e831e" textOverrun="CLIP" GridPane.columnIndex="5" GridPane.rowIndex="1">
-                           <font>
-                              <Font name="System Bold" size="30.0" />
-                           </font>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                           <effect>
-                              <DropShadow blurType="GAUSSIAN" color="#000000bf" spread="0.25" />
-                           </effect>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </Button>
+                               <Label text="Detalles:" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                        <TextArea fx:id="detallesProducto" maxHeight="150.0" prefHeight="50.0" prefWidth="50.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                      <Button fx:id="btnAgregarAccesorios" onAction="#cancelarCambios" text="Agregar _accesorios" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
+                      <Button fx:id="btnGuardar" defaultButton="true" onAction="#guardarOrden" text="_Guardar" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+                        <TableView fx:id="tablaPrecios" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
+                          <columns>
+                            <TableColumn fx:id="colTamanioPrecio1" editable="false" minWidth="150.0" prefWidth="200.0" text="Tamaño" />
+                            <TableColumn fx:id="colTamanioPrecio2" editable="false" minWidth="100.0" prefWidth="150.0" text="Precio" />
+                          </columns>
+                        </TableView>
+                        <CheckBox fx:id="soloAccesorio" mnemonicParsing="false" text="Sólo accesorio" GridPane.columnIndex="2" GridPane.halignment="LEFT" />
+                        <TableView fx:id="accesorioTabla" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="5" GridPane.rowSpan="2">
+                          <columns>
+                            <TableColumn fx:id="accesorioNombre" editable="false" minWidth="100.0" prefWidth="100.0" text="Accesorio" />
+                            <TableColumn fx:id="accesorioDetalles" editable="false" minWidth="100.0" prefWidth="150.0" text="Detalles" />
+                              <TableColumn fx:id="accesorioTamanio" maxWidth="500.0" minWidth="75.0" prefWidth="75.0" text="Tamaño" />
+                              <TableColumn fx:id="accesorioPrecio" maxWidth="500.0" minWidth="75.0" prefWidth="75.0" text="Precio" />
+                          </columns>
+                        </TableView>
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                  </GridPane>
-             </children>
-          </AnchorPane>
-        </items>
-      </SplitPane>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
