--- a/src/ar/com/xeven/ProductosView.fxml
+++ b/src/ar/com/xeven/ProductosView.fxml
@@ -20,6 +20,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="700" prefWidth="1000" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ar.com.xeven.ProductosViewController">
     <children>
@@ -33,11 +34,12 @@
                     <MenuItem fx:id="menuCerrar" onAction="#cerrar" text="_Cerrar" />
                   </items>
                 </Menu>
-                <Menu text="Editar">
-                  <items>
-                    <MenuItem fx:id="menuEliminar" onAction="#eliminarOrden" text="_Eliminar" />
-                  </items>
-                </Menu>
+                  <Menu mnemonicParsing="false" text="Productos">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Nuevo producto" />
+                        <MenuItem fx:id="menuProductos" mnemonicParsing="false" text="Ver productos" />
+                    </items>
+                  </Menu>
                 <Menu text="Ayuda">
                   <items>
                     <MenuItem fx:id="menuAbout" onAction="#acercaDe" text="Acerca de" />
@@ -47,18 +49,33 @@
             </MenuBar>
             <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <children>
-                  <TreeTableView fx:id="tablaProductos" editable="true" prefWidth="977.0" HBox.hgrow="SOMETIMES">
-                    <columns>
-                      <TreeTableColumn fx:id="colNombre" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="200.0" text="Producto" />
-                        <TreeTableColumn fx:id="colDetalles" maxWidth="1.7976931348623157E308" minWidth="100.0" prefWidth="300.0" text="Detalles" />
-                        <TreeTableColumn fx:id="colTamanio" maxWidth="300.0" minWidth="75.0" prefWidth="75.0" text="Tamaño" />
-                        <TreeTableColumn fx:id="colPrecio" maxWidth="200.0" minWidth="75.0" prefWidth="75.0" text="Precio" />
-                    </columns>
-                  </TreeTableView>
+                  <VBox prefWidth="800.0">
+                     <children>
+                        <TextField fx:id="buscador" onKeyTyped="#buscar" promptText="Buscar producto">
+                           <padding>
+                              <Insets left="8.0" />
+                           </padding>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TreeTableView fx:id="tablaProductos" editable="true" prefWidth="977.0" showRoot="false">
+                          <columns>
+                            <TreeTableColumn fx:id="colNombre" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="200.0" text="Producto" />
+                              <TreeTableColumn fx:id="colDetalles" maxWidth="1.7976931348623157E308" minWidth="150.0" prefWidth="200.0" text="Detalles" />
+                              <TreeTableColumn fx:id="colTamanio" maxWidth="300.0" minWidth="75.0" prefWidth="100.0" text="Tamaño" />
+                              <TreeTableColumn fx:id="colPrecio" maxWidth="200.0" minWidth="75.0" prefWidth="100.0" text="Precio" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TreeTableView>
+                     </children>
+                  </VBox>
                  <GridPane fx:id="detallesProd" alignment="CENTER_LEFT" focusTraversable="true" prefHeight="671.0" prefWidth="763.0" vgap="5.0">
                      <columnConstraints>
-                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="50.0" percentWidth="33.0" prefWidth="141.0" />
-                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="50.0" percentWidth="39.0" prefWidth="189.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.0" minWidth="50.0" percentWidth="38.0" prefWidth="141.0" />
+                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="189.0" minWidth="50.0" percentWidth="34.0" prefWidth="189.0" />
                          <ColumnConstraints hgrow="SOMETIMES" percentWidth="31.0" />
                      </columnConstraints>
                      <rowConstraints>
@@ -67,6 +84,7 @@
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -82,23 +100,40 @@
 
                                <Label text="Detalles:" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                         <TextArea fx:id="detallesProducto" maxHeight="150.0" prefHeight="50.0" prefWidth="50.0" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                      <Button fx:id="btnAgregarAccesorios" onAction="#cancelarCambios" text="Agregar _accesorios" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="7" />
-                      <Button fx:id="btnGuardar" defaultButton="true" onAction="#guardarOrden" text="_Guardar" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" />
+                      <Button fx:id="btnGuardar" defaultButton="true" disable="true" onAction="#guardarOrden" text="_Guardar" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
                         <TableView fx:id="tablaPrecios" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
                           <columns>
-                            <TableColumn fx:id="colTamanioPrecio1" editable="false" minWidth="150.0" prefWidth="200.0" text="Tamaño" />
-                            <TableColumn fx:id="colTamanioPrecio2" editable="false" minWidth="100.0" prefWidth="150.0" text="Precio" />
+                            <TableColumn fx:id="colTamanioPrecio1" minWidth="150.0" prefWidth="200.0" text="Tamaño" />
+                            <TableColumn fx:id="colTamanioPrecio2" minWidth="100.0" prefWidth="150.0" text="Precio" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
-                        <CheckBox fx:id="soloAccesorio" mnemonicParsing="false" text="Sólo accesorio" GridPane.columnIndex="2" GridPane.halignment="LEFT" />
-                        <TableView fx:id="accesorioTabla" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="5" GridPane.rowSpan="2">
+                        <CheckBox fx:id="soloAccesorio" disable="true" mnemonicParsing="false" text="Sólo accesorio" GridPane.columnIndex="2" GridPane.halignment="LEFT" />
+                        <TableView fx:id="accesorioTabla" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="2">
                           <columns>
                             <TableColumn fx:id="accesorioNombre" editable="false" minWidth="100.0" prefWidth="100.0" text="Accesorio" />
                             <TableColumn fx:id="accesorioDetalles" editable="false" minWidth="100.0" prefWidth="150.0" text="Detalles" />
                               <TableColumn fx:id="accesorioTamanio" maxWidth="500.0" minWidth="75.0" prefWidth="75.0" text="Tamaño" />
                               <TableColumn fx:id="accesorioPrecio" maxWidth="500.0" minWidth="75.0" prefWidth="75.0" text="Precio" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
+                        <Button fx:id="btnNuevo" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+                        <TextField fx:id="txtTamanio" promptText="Tamaño" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <TextField fx:id="txtPrecio" promptText="Precio" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <Button fx:id="botonAgregarPrecio" disable="true" mnemonicParsing="false" onAction="#agregarPrecio" text="Agregar" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                      </children>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
